# lambutter

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: CONSUMER-GUIDE.md  FEATURES.md  PRE-PUBLISH-AND-TESTING-PLAN.md  SPEC-LAMBUTTER.md  SUPPORTED-SCENARIOS.md  TESTING-AND-FUZZING-PLAN.md  TROUBLESHOOTING.md
examples/: inspect.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_btree_node.rs  fuzz_compressed_extent.rs  fuzz_dir_item.rs  fuzz_extent_data.rs  fuzz_superblock.rs
src/: block_read.rs  btree.rs  checksum.rs  chunk_tree.rs  dir.rs  error.rs  file.rs  inode.rs  lib.rs  path.rs  resolve.rs  root_tree.rs  superblock.rs  util.rs
src/compression/: lzo.rs  mod.rs  zlib.rs  zstd.rs
src/format/: constants.rs  flags.rs  mod.rs  repr.rs
tests/: fixtures.rs
tests/fixtures/data/: f1_single_uncompressed.expected.json  f1_single_uncompressed.img.zst  f1_single_uncompressed.img.zst.sha256  f2_single_zstd.expected.json  f2_single_zstd.img.zst  f2_single_zstd.img.zst.sha256  f3_single_zlib.expected.json  f3_single_zlib.img.zst  f3_single_zlib.img.zst.sha256  f4_single_lzo.expected.json  f4_single_lzo.img.zst  f4_single_lzo.img.zst.sha256  f5_dup_metadata.expected.json  f5_dup_metadata.img.zst  f5_dup_metadata.img.zst.sha256  f8_sparse_no_holes.expected.json  f8_sparse_no_holes.img.zst  f8_sparse_no_holes.img.zst.sha256  f9_symlink_chain.expected.json  f9_symlink_chain.img.zst  f9_symlink_chain.img.zst.sha256
tests/fixtures/scripts/: build.sh
